--- a/src/components/viewLyricModal/ViewLyric.scss
+++ b/src/components/viewLyricModal/ViewLyric.scss
@@ -1,32 +1,122 @@
-.close_view_lyric_button{
-  color: red;
-  position: absolute;
-  right: 5px;
-  top: 0px;
-  cursor: pointer;
+
+@media screen and (min-width: 992px) {
+
+
+  .close_view_lyric_button{
+    color: red;
+    position: absolute;
+    right: 5px;
+    top: 0px;
+    cursor: pointer;
+  }
+
+  .back_button{
+    color: white !important;
+    border: 1px solid red !important;
+    background-color: #dc3545 !important;
+    border-radius: 5px !important;
+  }
+
+  .back_arrow_view_lyric{
+    margin-right: 3px;
+  }
+
+  .view_lyric_modal_body{
+    margin-top: 15px;
+    margin-bottom: 20px;
+    height: 350px;
+    overflow: scroll;
+  }
+
+  .view_lyric_modal{
+    -moz-user-select:none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
 }
 
-.back_button{
-  color: white !important;
-  border: 1px solid red !important;
-  background-color: #dc3545 !important;
-  border-radius: 5px !important;
+
+@media screen and (min-width: 768px) and (max-width: 991px) and (orientation: portrait) {
+
+
+  .close_view_lyric_button{
+    color: red;
+    position: absolute;
+    right: 5px;
+    top: 0px;
+    cursor: pointer;
+  }
+
+  .back_button{
+    color: white !important;
+    border: 1px solid red !important;
+    background-color: #dc3545 !important;
+    border-radius: 5px !important;
+  }
+
+  .back_arrow_view_lyric{
+    margin-right: 3px;
+  }
+
+  .view_lyric_modal_body{
+    margin-top: 15px;
+    margin-bottom: 20px;
+    height: 350px;
+    overflow: scroll;
+  }
+
+  .view_lyric_modal{
+    -moz-user-select:none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
 }
 
-.back_arrow_view_lyric{
-  margin-right: 3px;
+
+@media screen and (max-width: 767px) and (orientation: portrait) {
+
+
+  .close_view_lyric_button{
+    color: red;
+    position: absolute;
+    right: 5px;
+    top: 0px;
+    cursor: pointer;
+  }
+
+  .back_button{
+    color: white !important;
+    border: 1px solid red !important;
+    background-color: #dc3545 !important;
+    border-radius: 5px !important;
+  }
+
+  .back_arrow_view_lyric{
+    margin-right: 3px;
+  }
+
+  .view_lyric_modal_body{
+    margin-top: 15px;
+    margin-bottom: 20px;
+    height: 350px;
+    overflow: scroll;
+  }
+
+  .view_lyric_modal{
+    -moz-user-select:none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
 }
 
-.view_lyric_modal_body{
-  margin-top: 15px;
-  margin-bottom: 20px;
-  height: 350px;
-  overflow: scroll;
-}
 
-.view_lyric_modal{
-  -moz-user-select:none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
+
+
+
+
+
+
+
